--- a/index.html
+++ b/index.html
@@ -12,6 +12,51 @@
     <title>My e-bank landing site</title>
 </head>
 <body>
+    <header>
+        <!-- =============- NAVBAR -================== -->
+        <nav class="navbar navbar-expand-lg navbar-dark">
+            <div class="container-fluid container">
+                <a class="navbar-brand" href="#">E~Bank</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto mx-lg-auto">
+                        <li class="nav-item">
+                            <a class="nav-link active text-center" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-center" href="#">Discover</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-center" href="#">Service</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-center" href="#">About Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-center" href="#">Get IN</a>
+                        </li>
+                    </ul>
+                    <button class="btn btn-success my_button_1" type="submit">Sign IN</button>
+                </div>
+            </div>
+        </nav>
+
+        <!-- ============== HOME ================ -->
+        <div class="home" id="home_image">
+            <!-- <img src="./img/main.jpg" alt="home bg"> -->
+            <div class="home_main">
+                <h2>E~Banking Is So Awesome</h2>
+                <p class="mx-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis delectus quae alias illo quasi a maiores dolorum, minus voluptatem, itaque amet eos molestiae. "We Hope You Will Enjoy This e-system."</p>
+                <br>
+                <a class="my_fab_button" href="#">Click Here!!</a>
+            </div>
+        </div>
+
+
+    </header>
     
 
     <!-- bs5 js cdn -->
