--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <!-- =============- NAVBAR -================== -->
-        <nav class="navbar navbar-expand-lg navbar-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
             <div class="container-fluid container">
                 <a class="navbar-brand" href="#">E~Bank</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -24,16 +24,16 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mx-lg-auto">
                         <li class="nav-item">
-                            <a class="nav-link active text-center" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active text-center" aria-current="page" href="#home_image">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-center" href="#about">About Us</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-center" href="#">Discover</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-center" href="#">Service</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-center" href="#">About Us</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-center" href="#">Get IN</a>
@@ -54,9 +54,25 @@
                 <a class="my_fab_button" href="#">Click Here!!</a>
             </div>
         </div>
+        
+    </header>  
+                            <!--  =================== -->
 
-
-    </header>
+    <!-- =================== ABOUT section ====================== start =============== -->
+    <section id="about" class="py-5">
+        <div class="row align-items-center container my-5 mx-auto">
+            <div class="text_about col-12 col-md-6 col-lg-6 pt-5 pb-5">
+                <h6>PRO ACCOUNT BANKING</h6>
+                <h2>Unlimited Transaction with Zero fees</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, quo sequi? Aliquam, consequatur libero? Architecto doloribus modi mollitia iusto aut magni.</p>
+                <button class="my_fab_button w-50">Learn More</button>
+            </div>
+            <div class="img_about col-12 col-md-6 col-lg-6 pt-5 pb-5">
+                <img class="img-fluid" src="./img/1.svg" alt="">
+            </div>
+        </div>
+    </section>
+    <!-- =================== ABOUT section ====================== done =======-->
     
 
     <!-- bs5 js cdn -->
