--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                             <a class="nav-link text-center" href="#about">About Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-center" href="#">Discover</a>
+                            <a class="nav-link text-center" href="#discover">Discover</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-center" href="#">Service</a>
@@ -65,14 +65,31 @@
                 <h6>PRO ACCOUNT BANKING</h6>
                 <h2>Unlimited Transaction with Zero fees</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, quo sequi? Aliquam, consequatur libero? Architecto doloribus modi mollitia iusto aut magni.</p>
-                <button class="my_fab_button w-50">Learn More</button>
+                <button class="my_button_3 w-50">Learn More</button>
             </div>
             <div class="img_about col-12 col-md-6 col-lg-6 pt-5 pb-5">
                 <img class="img-fluid" src="./img/1.svg" alt="">
             </div>
         </div>
     </section>
-    <!-- =================== ABOUT section ====================== done =======-->
+    <!-- =================== ABOUT section ====================== done ================== -->
+
+
+    <!-- =================== Discover section ====================== start =============== -->
+    <section id="discover" class="py-5">
+        <div class="row align-items-center container my-5 mx-auto">
+            <div class="img_dis col-12 col-md-6 col-lg-6 pt-5 pb-5">
+                <img class="img-fluid" src="./img/2.png" alt="">
+            </div>
+            <div class="text_dis col-12 col-md-6 col-lg-6 pt-5 pb-5">
+                <h6>ANYTIME~ANYWHERE Feature</h6>
+                <h2>Login to Your Account at anytime anywhere</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, quo sequi? Aliquam, consequatur libero? Architecto doloribus modi mollitia iusto aut magni.</p>
+                <button class="my_fab_button w-50 text-dark bg-success bg-opacity-50">Learn More</button>
+            </div>
+        </div>
+    </section>
+    <!-- =================== Discover section ====================== done ================== -->
     
 
     <!-- bs5 js cdn -->
