--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                             <a class="nav-link text-center" href="#discover">Discover</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-center" href="#">Service</a>
+                            <a class="nav-link text-center" href="#service">Service</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-center" href="#">Get IN</a>
+                            <a class="nav-link text-center" href="#get">Get More</a>
                         </li>
                     </ul>
                     <button class="btn btn-success my_button_1" type="submit">Sign IN</button>
@@ -77,6 +77,7 @@
 
     <!-- =================== Discover section ====================== start =============== -->
     <section id="discover" class="py-5">
+        <h1 class="text-center fw-bold" style="color: rgb(119, 90, 16);">Discover</h1>
         <div class="row align-items-center container my-5 mx-auto">
             <div class="img_dis col-12 col-md-6 col-lg-6 pt-5 pb-5">
                 <img class="img-fluid" src="./img/2.png" alt="">
@@ -91,6 +92,48 @@
     </section>
     <!-- =================== Discover section ====================== done ================== -->
     
+
+    <!-- =================== SERVICE section ======================= starts -->
+    <section id="service" class="py-5">     <!--  bg-dark bg-gradient -->
+        <div class="heading text-center pt-4">
+            <h1 class="fw-bold pb-5">OUR SERVICES</h1>
+        </div>
+        <div class="container row row-cols-1 row-cols-md-3 g-4 mx-auto justify-content-center align-items-center text-center">
+            <div class="col">
+                <div class="card h-100">
+                    <img src="./img/2.png" class="card-img-top img-fluid h-75" alt="...">
+                    <div class="card-body">
+                        <h5 class="fw-bold">Savings</h5>
+                        <p class="card-text mb-3">This is a wider card with supporting text below as a natural lead-in to additional
+                            content. This content is a little bit longer.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <img src="./img/1.svg" class="card-img-top img-fluid h-75" alt="...">
+                    <div class="card-body">
+                        <h5 class="fw-bold">Feel FREE</h5>
+                        <p class="card-text mb-3">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <img src="./img/3.png" class="card-img-top img-fluid h-7" alt="...">
+                    <div class="card-body">
+                        <h5 class="fw-bold">Be A Entrepreneur</h5>
+                        <p class="card-text mb-3">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- =================== SERVICE section ======================= ends -->
+
+    <!-- ============================ get section ================== starts -->
+    <section id="get"></section>
+    <!-- ============================ get section ================== ends -->
 
     <!-- bs5 js cdn -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
