--- a/index.html
+++ b/index.html
@@ -132,7 +132,19 @@
     <!-- =================== SERVICE section ======================= ends -->
 
     <!-- ============================ get section ================== starts -->
-    <section id="get"></section>
+    <section id="get">
+        <div class="row align-items-center container my-5 mx-auto">
+            <div class="text_get col-12 col-md-6 col-lg-6 pt-5 pb-5">
+                <h6>Wanna Get More??</h6>
+                <h2>Create an Account & Get to Know More</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, quo sequi? Aliquam, consequatur libero? Architecto doloribus modi mollitia iusto aut magni.</p>
+                <button class="my_button_3 w-50">Learn More</button>
+            </div>
+            <div class="img_get col-12 col-md-6 col-lg-6 pt-5 pb-5">
+                <img class="img-fluid" src="./img/4.png" alt="">
+            </div>
+        </div>
+    </section>
     <!-- ============================ get section ================== ends -->
 
     <!-- bs5 js cdn -->
