--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="shortcut icon" href="./img/1.svg" type="image/x-icon">
     <!-- bs5 cdn -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- font awesome cdn -->
@@ -12,18 +14,18 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
     
     <link rel="stylesheet" href="./style.css">
-    <!-- <link rel="shortcut icon" href="" type="image/x-icon"> -->
     <title>My e-bank landing site</title>
 </head>
 
-<body>
+<body data-bs-spy="scroll" data-bs-target="#navbarSupportedContent">
+
     <header>
         <!-- =============- NAVBAR -================== -->
+        <!-- <nav class="navbar navbar-expand-lg navbar-dark fixed-top"> -->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
             <div class="container-fluid container">
                 <a class="navbar-brand" href="#">E~Bank</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -245,7 +247,7 @@
 
         <div class="container">
             <h2 id="my-h2" class="text-center fw-bold">- Our Directors -</h2>
-            <p class="lead text-center text-white mb-5">
+            <p class="lead text-center mb-5" style="color: rgba(209, 16, 16, 0.965);">
                 Our directors all have 10+ years working as a director in the banking industry
             </p>
 
