Website buidind done

--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
     
             <!-- Section: Text -->
             <section class="mb-4"> 
-                <hr><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt distinctio earum repellat quaerat voluptatibus placeat nam, commodi optio pariatur est quia magnam eum sequi voluptate quas.</p><hr> 
+                <hr><p>Lorem ipsum dolor sit amet placeat nam, commodi optio agnam eum sequi voluptate quas.</p><hr> 
             </section>
             <!-- Section: Text -->
     
