--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                             <img src="https://randomuser.me/api/portraits/men/11.jpg" class="rounded-circle mb-3" alt=""/>
                             <h3 class="card-title mb-3">John Doe</h3>
                             <p class="card-text">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda accusamus nobis sed cupiditate iusto? Quibusdam.
+                                Lorem ipsum nobis sed cupiditate iusto? Quibusdam.
                             </p>
                             <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
                             <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
@@ -275,7 +275,7 @@
                             <img src="https://randomuser.me/api/portraits/women/11.jpg" class="rounded-circle mb-3" alt="" />
                             <h3 class="card-title mb-3">Jane Doe</h3>
                             <p class="card-text">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda accusamus nobis sed cupiditate iusto? Quibusdam.
+                                Lorem ipsum nobis sed cupiditate iusto? Quibusdam.
                             </p>
                             <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
                             <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
@@ -291,7 +291,7 @@
                             <img src="https://randomuser.me/api/portraits/men/12.jpg" class="rounded-circle mb-3" alt="" />
                             <h3 class="card-title mb-3">Steve Smith</h3>
                             <p class="card-text">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda accusamus nobis sed cupiditate iusto? Quibusdam.
+                                Lorem ipsum nobis sed cupiditate iusto? Quibusdam.
                             </p>
                             <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
                             <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
@@ -307,7 +307,7 @@
                             <img src="https://randomuser.me/api/portraits/women/12.jpg" class="rounded-circle mb-3" alt="" />
                             <h3 class="card-title mb-3">Sara Smith</h3>
                             <p class="card-text">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda accusamus nobis sed cupiditate iusto? Quibusdam.
+                                Lorem ipsum nobis sed cupiditate iusto? Quibusdam.
                             </p>
                             <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
                             <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
