--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                     </h2>
                     <div id="question-one" class="accordion-collapse collapse" data-bs-parent="#questions">
                         <div class="accordion-body">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis, nostrum adipisci commodi veritatis cupiditate laboriosam voluptatem iusto et autem eius, libero corporis, quaerat voluptas omnis quibusdam sapiente nesciunt non soluta ut perferendis provident obcaecati quos dicta. Ratione nostrum magnam quis neque architecto aliquid in at quas alias? Praesentium, cupiditate.
+                            Lorem ipsum dolor sit amet obcaecati quos e nostrum magnam quis neque architecto aliquid in at quas alias? Praesentium, cupiditate.
                         </div>
                     </div>
                 </div>
@@ -191,7 +191,7 @@
                     </h2>
                     <div id="question-two" class="accordion-collapse collapse" data-bs-parent="#questions">
                         <div class="accordion-body">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit piente magni obcaecati aliquid possimus fugiat! Repellendus praesentium commodi velit ullam animi voluptatem minima sint, quaerat, unde debitis ipsa!
+                            Lorem ipsum dolor sit amet consectetur adipie am animi voluptatem minima sint, quaerat, unde debitis ipsa!
                         </div>
                     </div>
                 </div>
@@ -205,7 +205,7 @@
                     </h2>
                     <div id="question-three" class="accordion-collapse collapse" data-bs-parent="#questions">
                         <div class="accordion-body">
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit ccusantium ipsum, aliquid autem tempore, unde nam minus molestiae omnis quos optio voluptates expedita, quis repellendus corrupti.
+                            Lorem ipsum, dolor asas autem tempore, unde nam minus molestiae omnis quos optio voluptates expedita, quis repellendus corrupti.
                         </div>
                     </div>
                 </div>
@@ -219,7 +219,7 @@
                     </h2>
                     <div id="question-four" class="accordion-collapse collapse" data-bs-parent="#questions">
                         <div class="accordion-body">
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit ibus officiis quis consequuntur. Odit officiis quo optio, consequuntur impedit cum, libero omnis culpa porro aliquid sed obcaecati faciinus.
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit ibis culpa porro aliquid sed obcaecati faciinus.
                         </div>
                     </div>
                 </div>
